<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="715dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:maxWidth="15dp"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/suda" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="reader"
                android:textColor="#FF0000"
                android:textSize="24sp"
                app:fontFamily="sans-serif-thin" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spinner_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/mainGlobalMenu"
                android:focusable="auto"
                tools:layout_editor_absoluteX="165dp"
                tools:layout_editor_absoluteY="65dp" />

        </LinearLayout>


        <EditText
            android:id="@+id/text_inputread"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/main_input_readtext"
            android:inputType="textMultiLine"
            android:maxHeight="100dp"
            android:scrollbarStyle="outsideInset"
            android:scrollbars="vertical"
            android:scrollHorizontally="false"
            android:singleLine="false" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_readtext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="read" />

                    <Button
                        android:id="@+id/button_sysExit0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:background="#FF0000"
                        android:text="exit(0)"
                        android:textAllCaps="false" />
                </LinearLayout>

                <Switch
                    android:id="@+id/button_isMultiline"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/main_button_ismulti" />

                <TextView
                    android:id="@+id/text_outputdebug"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="@string/main_output_debug" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_printlog"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/main_button_getlog"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/button_read"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#1A03A9F4"
                        android:text="read"
                        android:textAllCaps="false"
                        android:textColor="#9D3BFF"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/button_readcn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:background="#1A03A9F4"
                        android:text="@string/main_button_readcn"
                        android:textAllCaps="false"
                        android:textColor="#9D3BFF" />

                    <Button
                        android:id="@+id/button_stop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#1AFFEB3B"
                        android:text="stop" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_booklist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>